--- a/Hunterinstruction.html
+++ b/Hunterinstruction.html
@@ -17,7 +17,7 @@
 </header>
 
 <nav id="nav-menu">
-  <a href="index.html">Main Dashboard</a>
+  <a href="../index.html">Main Dashboard</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com" target="_blank">Retail Site</a>
