--- a/Store 14/Hunter.html
+++ b/Store 14/Hunter.html
@@ -60,17 +60,17 @@
     <p>Use your assigned credentials below to log in.</p>
 
   <div id="credsWrapper" class="grid-container">
-    <div id="bgUserBox" class="cred-box" onclick="copyToClipboard(this.dataset.copy)">
-      Username: <span id="bgUserText">Loading…</span>
+    <div id="hunterUserBox" class="cred-box" onclick="copyToClipboard(this.dataset.copy)">
+      Username: <span id="hunterUserText">Loading…</span>
        <small>(Tap to copy)</small>
     </div>
-  <div id="bgPassBox" class="cred-box" onclick="copyToClipboard(this.dataset.copy)">
-      Password: <span id="bgPassText">Loading…</span>
+  <div id="hunterPassBox" class="cred-box" onclick="copyToClipboard(this.dataset.copy)">
+      Password: <span id="hunterPassText">Loading…</span>
        <small>(Tap to copy)</small>
     </div>
   </div>
   <div id="noCreds" class="muted" style="display:none; margin-top:10px;">
-    No BG credentials found for your account. Please contact IT.
+    No Hunter credentials found for your account. Please contact IT.
   </div>
 
   <div class="training-buttons">    
