--- a/Store 01/TodaysClass.html
+++ b/Store 01/TodaysClass.html
@@ -26,7 +26,7 @@
 <section id="role">
   <div class="container">
     <h1>Todays Class - Store 01</h1>
-    <p>Use your assigned credentials below to log in.</p>
+    <p>Dowload the app using the appropriate link below <br> Use your assigned credentials below to log in.</p>
 
   <div id="credsWrapper" class="grid-container">
     <div id="todaysClassUserBox" class="cred-box" onclick="copyToClipboard(this.dataset.copy)">
