--- a/Store 01/tech.html
+++ b/Store 01/tech.html
@@ -29,10 +29,10 @@
     <p>Choose and complete the trainings below.</p>
 
   <div class="role-buttons">    
-    <a class="button" href="https://go.team1bg.com" target="_blank">BG Training</a>
+    <a class="button" href="BG.html">BG Training</a>
     <a class="button" href="Hunter.html">Hunter Training</a>
     <a class="button" href="TodaysClass.html">Todays Class</a>
-    <a class="button" href="NAPA.html">NAPA Training</a>
+    <a class="button" href="Isolved.html">ISolved Resources</a>
   </div>
 
     <footer>
