--- a/Store 02/tech.html
+++ b/Store 02/tech.html
@@ -27,7 +27,7 @@
 <section id="role">    
  <div class="container">
     <h1>Technician Training - Store 02</h1>
-    <p>Choose and complete the trainings below.</p>
+    <p>Select your training from the list below.</p>
 
   <div class="role-buttons">    
     <a class="button" href="BG.html">BG Training</a>
